--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,6 @@
 <%= button_to "Create New User", register_path, method: :get %>
+<%= button_to "Log In", "/login", method: :get %>
+
 <section class='existing-users'>
     <p>Existing Users: </p>
     <% @users.each do |user| %>
