--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,9 @@
-<%= button_to "Create New User", register_path, method: :get %>
-<%= button_to "Log In", "/login", method: :get %>
+<% if current_user %>
+    <%= button_to "Log Out", logout_path, method: :post %>
+<% else%>
+    <%= button_to "Create New User", register_path, method: :get %>
+    <%= button_to "Log In", "/login", method: :get %>
+<% end %>
 
 <section class='existing-users'>
     <p>Existing Users: </p>
