--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,9 +5,11 @@
     <%= button_to "Log In", "/login", method: :get %>
 <% end %>
 
-<section class='existing-users'>
+<% if current_user%>
+    <section class='existing-users'>
     <p>Existing Users: </p>
     <% @users.each do |user| %>
         <li><%= link_to user.email, user_path(user.id) %></li>
     <% end %>
-</section>
+    </section>
+<% end %>
